2015-04-01  Nicolas Petton  <nicolas@petton.fr>

	* Version 24.5 released.

2015-01-30  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	* automated/python-tests.el
	(python-indent-dedent-line-backspace-2)
	(python-indent-dedent-line-backspace-3): New tests.

2015-01-30  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	* automated/python-tests.el (python-indent-pep8-1)
	(python-indent-pep8-2, python-indent-pep8-3)
	(python-indent-after-comment-2): Fix tests.
	(python-indent-after-comment-3): New test.

2015-01-26  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	* automated/python-tests.el (python-indent-pep8-1)
	(python-indent-pep8-2, python-indent-pep8-3)
	(python-indent-after-comment-1, python-indent-after-comment-2)
	(python-indent-inside-paren-1, python-indent-inside-paren-2)
	(python-indent-after-block-1, python-indent-after-block-2)
	(python-indent-after-backslash-1, python-indent-after-backslash-2)
	(python-indent-after-backslash-3, python-indent-block-enders-1)
	(python-indent-block-enders-2, python-indent-block-enders-3)
	(python-indent-block-enders-4, python-indent-block-enders-5)
	(python-indent-dedenters-1, python-indent-dedenters-2)
	(python-indent-dedenters-3, python-indent-dedenters-4)
	(python-indent-dedenters-5, python-indent-dedenters-6)
	(python-indent-dedenters-7, python-indent-dedenters-8): Fix tests.
	(python-indent-base-case, python-indent-after-block-3)
	(python-indent-after-backslash-5, python-indent-inside-paren-3)
	(python-indent-inside-paren-4, python-indent-inside-paren-5)
	(python-indent-inside-paren-6, python-indent-inside-string-1)
	(python-indent-inside-string-2, python-indent-inside-string-3)
	(python-indent-dedent-line-backspace-1): New Tests.

2015-01-24  Glenn Morris  <rgm@gnu.org>

	* automated/regexp-tests.el: Require regexp-opt, which is
	not preloaded --without-x.

2015-01-23  Dmitry Gutov  <dgutov@yandex.ru>

	Fix package tests when TMPDIR is in HOME.  (Bug#19657)
	* automated/package-test.el (with-package-test):