@@ -1,3 +1,8 @@
+2015-04-01  Michael Albinus  <michael.albinus@gmx.de>
+
+	* automated/tramp-tests.el (tramp-test06-directory-file-name):
+	Fix docstring and last test.
+
 2015-04-01  Nicolas Petton  <nicolas@petton.fr>
 
 	* Version 24.5 released.
